# scanlytics

./: .gitignore  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.js  vitest.config.ts
src/: package.json
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/db/: Cargo.toml
src-tauri/db/src/: init.rs  lib.rs  models.rs
src-tauri/icons/: icon.icns
src-tauri/src/: auth_middleware.rs  commands.rs  lib.rs  main.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/auth/login/: controller.rs  mod.rs  models.rs  services.rs
src-tauri/src/auth/logout/: controller.rs  mod.rs  models.rs  services.rs
src-tauri/src/auth/signup/: controller.rs  mod.rs  models.rs  services.rs
src-tauri/src/auth/validate/: controller.rs  mod.rs  models.rs  services.rs
src-tauri/src/db/: api.rs  init.rs  mod.rs  models.rs
src-tauri/src/image_analysis/: mod.rs
src-tauri/src/image_analysis/image_processing/: controller.rs  models.rs  services.rs
src-tauri/src/image_analysis/ml_models/: models.rs  services.rs
src-tauri/src/image_processing/: models.rs  services.rs
src-tauri/src/middleware/: auth.rs  mod.rs  models.rs
src-tauri/src/notes/: controller.rs  mod.rs  models.rs  services.rs
src-tauri/src/onnx/: controller.rs  models.rs  services.rs
src-tauri/src/organizations/: controller.rs  models.rs  services.rs
src-tauri/src/patients/: controller.rs  mod.rs  models.rs  services.rs
src-tauri/src/reports/: controller.rs  mod.rs  models.rs  services.rs
src-tauri/src/testapi/: controller.rs  mod.rs  models.rs  services.rs
src-tauri/src/users/: controller.rs  mod.rs  models.rs  services.rs
src/lib/components/ui/dialog/: index.ts
src/lib/components/ui/popover/: index.ts
src/lib/types/: report.types.ts
src/routes/: +layout.svelte  +layout.ts
src/routes/(landing)/: +page.svelte
src/routes/(landing)/components/: header-section.svelte  title-section.svelte
src/routes/auth/components/: forgot-password.svelte
src/routes/auth/login/: +error.svelte  +layout.svelte  +page.svelte
src/routes/auth/signup/: +layout.svelte  +page.svelte
src/routes/befundung/new/: +page.svelte
src/routes/components/ui/: button.svelte  card.svelte  darkmode.svelte  errormodal.svelte  infomodal.svelte  navigation.svelte  succuessmodal.svelte
src/routes/invoices/: +layout.svelte  +layout.ts  +page.svelte
src/routes/menu/: +layout.svelte  +page.svelte
src/routes/notes/: +error.svelte  +layout.svelte  +page.svelte
src/routes/notes/[id]/: +page.svelte
src/routes/notes/[slug]/: +layout.ts  +page.svelte
src/routes/notes/api/: patient-data.ts  patients-note-data.ts  user-data.ts
src/routes/notes/components/: data-table-actions.svelte  data-table.svelte  new-note-modal.svelte  new-note.svelte  note-form.svelte  patient-combobox.svelte
src/routes/notes/new/: +page.svelte
src/routes/patients/: +layout.svelte  +page.svelte
src/routes/patients/[slug]/: +page.svelte
src/routes/patients/api/: user-data.ts
src/routes/patients/components/: data-table-actions.svelte  data-table.svelte  doctor-combobox.svelte  patient-form.svelte
src/routes/patients/new/: +page.svelte
src/routes/reports/: +error.svelte  +layout.svelte  +page.svelte
src/routes/reports/[slug]/: +page.svelte
src/routes/reports/api/: image-data.ts  patient-data.ts  process-images.ts  report-data.ts  user-data.ts
src/routes/reports/components/: data-table-actions.svelte  data-table.svelte  doctor-combobox.svelte  image-carousel.svelte  image-select.svelte  report-form.svelte  report-meta-data.svelte  report-text-area.svelte  suggestion-list.svelte  text-proposals.svelte
src/routes/reports/new/: +page.svelte
src/stores/: Auth.ts  Patient.ts  PatientNote.ts  Report.ts  User.ts  patient.ts
src/tests/: login.test.ts  setup.ts  signup.test.ts
src/tests/mocks/: navigation.ts
tests/: patient-note-form.spec.ts
