[workspace]
members = ["db"]
resolver = "2"  

[package]
name = "scanlytics"
version = "0.0.0"
description = "A Tauri App"
authors = ["JK"]
edition = "2021"

[lib]
name = "scanlytics_lib"
path = "src/lib.rs"

[[bin]]
name = "scanlytics"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
scanlytics-db = { path = "db" }
tauri = { version = "2.0.2", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11.0"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
image = "0.25.2"
base64 = "0.22.1"
tract-onnx = "0.21.6"
ndarray = "0.16.1"
reqwest = { version = "0.12.8", features = ["json"] }
zxcvbn = "3.1.0"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
thiserror = "1.0.65"
log = "0.4.14"

[features]
custom-protocol = ["tauri/custom-protocol"]
