[workspace]
members = ["db"]
resolver = "2"

[package]
name = "scanlytics"
version = "0.0.9"
description = "A Tauri App"
authors = ["JK"]
edition = "2021"

[lib]
name = "scanlytics_lib"
path = "src/lib.rs"

[[bin]]
name = "scanlytics"
path = "src/main.rs"

[workspace.dependencies]
surrealdb = { version = "2.1.2", features = ["kv-rocksdb", "kv-mem"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tauri = { version = "2.1.1", features = [] }

[dependencies]
scanlytics-db = { path = "db" }
tauri = { version = "2.1.1", features = ["protocol-asset", "test"] }
tauri-runtime = "2.0"
tauri-plugin-shell = "2.0.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_bytes = "0.11.0"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
image = "0.25.5"
base64 = "0.22.1"
tract-onnx = "0.21.6"
ndarray = "0.16.1"
reqwest = { version = "0.12.9", features = ["json"] }
zxcvbn = "3.1.0"
keyring = { version = "3.6.1", features = ["apple-native", "windows-native", "sync-secret-service"] }
thiserror = "2.0.3"
log = "0.4.14"

[dev-dependencies]
mockall = "0.13.1"
wiremock = "0.6.2"
lazy_static = "1.4"
tempfile = "3.14.0"

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
custom-protocol = ["tauri/custom-protocol"]
test-utils = []